--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+@tailwind utilities;
 
 @custom-variant dark (&:is(.dark *));
 
@@ -118,5 +119,14 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .header-button {
+    @apply cursor-pointer p-1 border-transparent hover:border-white rounded-[2px];
+  }
+  .h1-bold {
+    @apply font-bold text-2xl lg:text-3xl;
   }
 }
